[package]
name = "vulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.16.0"
png = "0.17.5"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = "3.2.2"
vulkanalia = { version = "0.14.0", features = ["libloading", "window"] }
winit = "0.26.1"